# centre-api/src/main/java/com/centre/poly/person/entity/Student.java
@@ -1,14 +1,7 @@
 package com.centre.poly.person.entity;
 
-import com.centre.poly.classmanagement.entity.AcceleratedClass;
-import com.centre.poly.classmanagement.entity.AcceleratedClassEntry;
-import com.centre.poly.classmanagement.entity.AccreditedClass;
-import com.fasterxml.jackson.annotation.JsonManagedReference;
 import jakarta.persistence.*;
 import lombok.*;
-
-import java.util.ArrayList;
-import java.util.List;
 
 @Getter
 @Setter
@@ -19,8 +12,7 @@ import java.util.List;
 public class Student extends Person {
     
     private String levelOfEducation;
-    private String identityNumber;
-    
+
     @ManyToOne
     @JoinColumn(name = "mother_id")
     private Parent mother;
