# centre-ui/src/app/services/models/student-request.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface StudentRequest {
+  birthDate: string;
   email?: string;
   firstName: string;
   identityNumber?: string;
